[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://ui/components/train_panel/train_panel.gd" id="1_train_panel"]

[node name="TrainPanel" type="Control"]
custom_minimum_size = Vector2(450, 280)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_train_panel")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.16, 0.95)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "培训面板"
horizontal_alignment = 1

[node name="CounterRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CounterLabel" type="Label" parent="MarginContainer/VBoxContainer/CounterRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.7, 0.8, 0.9, 1)
text = "培训次数: 0 / 0"

[node name="TrainableSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="MarginContainer/VBoxContainer/TrainableSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
text = "待命区员工（点击选择）"

[node name="TrainableContainer" type="HFlowContainer" parent="MarginContainer/VBoxContainer/TrainableSection"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="PathSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="SectionLabel" type="Label" parent="MarginContainer/VBoxContainer/PathSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.6, 0.7, 0.8, 1)
text = "培训目标"

[node name="PathContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/PathSection"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "确认培训"
